--- a/style.css
+++ b/style.css
@@ -158,11 +158,6 @@ p[data-width="wide"]{
   max-width: 100%;
 }
 
-.text-hover:hover{
-  color: var(--clr-primary-1);
-  transition: 0.2s;
-}
-
 ul {
   padding-left: 20px;
 }
@@ -374,6 +369,31 @@ a {
 .bg-primary-3 {background-color: var(--clr-primary-3);}
 .bg-neutral-100 {background-color: var(--clr-neutral-100);}
 .bg-neutral-900 {background-color: var(--clr-neutral-900);}
+
+.text-hover-primary-1:hover{
+  color: var(--clr-primary-1);
+  transition: 0.2s;
+}
+
+.text-hover-primary-2:hover{
+  color: var(--clr-primary-2);
+  transition: 0.2s;
+}
+
+.text-hover-primary-3:hover{
+  color: var(--clr-primary-3);
+  transition: 0.2s;
+}
+
+.text-hover-neutral-100:hover{
+  color: var(--clr-neutral-100);
+  transition: 0.2s;
+}
+
+.text-hover-neutral-900:hover{
+  color: var(--clr-neutral-900);
+  transition: 0.2s;
+}
 
 .fw-bold {font-weight: var(--fw-bold);}
 .fw-medium {font-weight: var(--fw-medium);}
